# Afaina

./: Cargo.toml  build.rs
api/: afaina.proto
src/: main.rs
src/model/: afaina.modelfile
src/service/: afaina_service.rs  mod.rs
